--- a/HeadacheCDSSWeb/Views/Shared/PatlistForRe.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/PatlistForRe.cshtml
@@ -24,3 +24,9 @@
 
 </table>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        var dataset = Model;
+    })
+</script>
