--- a/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
@@ -4,15 +4,20 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Regionview.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.min.js")" type="text/javascript"></script>
+      <script src="@Url.Content("~/Scripts/jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+    <!--<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>-->
     <link href="@Url.Content("~/Content/jqpagination.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery.jqpagination.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.jqpagination.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/zebra_datepicker.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/zebra_datepicker.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-ui.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/jquery.dataTables.min.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.dataTables.js")" type="text/javascript"></script>
    
 </head>
 <body>
